language/move-lang/tests/move_check/expansion/unpack_assign_block_expr.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/unpack_assign_block_expr.move:4:13
  │
4 │         S { let f = 0; } = S { f: 0 };
  │             ^^^
  │             │
  │             Unexpected 'let'
  │             Expected an identifier

